--- a/src/resume.njk
+++ b/src/resume.njk
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: A Short Bio
+title: Rakshit Soral Marketing CV Printable A4
 ---
 
 <!DOCTYPE html>
@@ -9,9 +9,10 @@ title: A Short Bio
     <meta charset="UTF-8">
     <title>CV Printable A4 - Rakshit Soral</title>
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Rakshit Soral - Curriculum Vitae" />
+    <meta name="description" content="Rakshit Soral - Demand Generation Marketing Curriculum Vitae" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
         body {
             background: rgb(204,204,204); 
@@ -42,7 +43,6 @@ title: A Short Bio
                 display: none !important;
             }
         }
-
         html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
             border: 0;
             font: inherit;
@@ -217,7 +217,7 @@ title: A Short Bio
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            margin: 0px 550px;
+            margin: 0;
             cursor: pointer; 
             text-transform: uppercase;
         }
@@ -232,7 +232,14 @@ title: A Short Bio
             z-index: 10;
             background: #da2d2d;
             border-bottom: solid #da2d2d 6px;
-            top: 0px;
+            top: 0;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            align-items: center;
+        }
+        #button button {
+            margin: 0;
         }
         p {
             line-height: 15pt;
@@ -252,13 +259,19 @@ title: A Short Bio
     </style>
 </head>
 <body id="top">
+
+    <!-- BUTTONS: Print and Download at the Top -->
+    <div id="button" class="no-print">
+        <button type="button" onclick="window.print()">
+            <i class="fa fa-print" aria-hidden="true"></i> Print
+        </button>
+        <button type="button" id="downloadResumeBtn">
+            <i class="fa fa-download" aria-hidden="true"></i> Download Resume
+        </button>
+    </div>
+
     <!-- Page 1 -->
     <div class="page">
-        <div id="button" class="no-print">
-            <button type="button" onclick="window.print()"><span class="button-txt">
-                <i class="fa fa-print" aria-hidden="true"></i> &nbsp;Print</span>
-            </button>
-        </div>
         <div class="cv">
             <div id="header">
                 <div class="contactDetails">
@@ -353,7 +366,6 @@ title: A Short Bio
         <div class="cv">
             <div id="mainArea">
                 <section>
-            
                     <div class="sectionContent">
                         <ul class="list">
                             <li>
@@ -422,5 +434,33 @@ title: A Short Bio
             </div>
         </div>
     </div>
+    
+    <!-- PDF Generation Script -->
+    <script>
+    document.getElementById("downloadResumeBtn").addEventListener("click", function () {
+        // Select all the resume pages (both div.page elements)
+        const resumePages = document.querySelectorAll(".page");
+        // Create a container div to hold clone of pages for pdf generation
+        const pdfContainer = document.createElement("div");
+        pdfContainer.style.background = "#fff";
+        // Clone each page and append to container so pdf captures styling and layout
+        resumePages.forEach(page => {
+            const clone = page.cloneNode(true);
+            clone.style.pageBreakAfter = "always"; // ensure page break in PDF
+            pdfContainer.appendChild(clone);
+        });
+        // Use html2pdf to generate PDF from container
+        html2pdf()
+          .set({
+            margin: [10, 10, 10, 10],
+            filename: 'Rakshit_Soral_Marketing_CV.pdf',
+            image: { type: 'jpeg', quality: 0.98 },
+            html2canvas: { scale: 2, letterRendering: true, logging: false },
+            jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+          })
+          .from(pdfContainer)
+          .save();
+    });
+    </script>
 </body>
 </html>
